Add UI service container